# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.11.0] - 2021-06-22
### Changed
- Synchronized zoom for IV and It plots (#18).

## [0.10.0] - 2020-08-17
### Changed
- Ramp down before SMU reset (#19).
- Speed up ramp down (#20).

## [0.9.0] - 2020-07-06
### Changed
- Show seconds in plot time axes (#15).
- Write HV status (ON, OFF, N/A) to files (#16).

## [0.8.0] - 2020-05-20
### Changed
- Improved log window
- Indicate climate chamber states: ON, OFF and PAUSE
### Fixed
- Various small fixes.

## [0.7.0] - 2020-05-18
### Added
- Log window.
- Multimeter filter settings.
- IV/It plot for SMU current
- Auto-scaled units (uA, nA, pA).
### Changed
- Show running state instead of program number

## [0.6.1] - 2020-05-05
### Changed
- Absolute step size for ramp.
### Fixed
- Total compliance for negative voltage.
- Ssingle compliance for negative voltage.

## [0.6.0] - 2020-02-14
### Added
- Negative voltages.
- Additional temperature plots.
- Reset monitoring on start of measurement.
### Changed
- Various UI improvements.

## [0.5.0] - 2020-01-15
### Added
- Shunt Box monitoring.
### Changed
- Using QCharted 1.1.

## [0.4.1] - 2019-12-18
### Fixed
- Clear plots on start of measurement.

## [0.4.0] - 2019-12-18
### Added
- ShuntBox HV relais.
### Changed
- Improved plots.

## [0.3.0] - 2019-12-03
### Added
- ShuntBox PT100 channels.

[Unreleased]: https://github.com/hephy-dd/comet-pqc/compare/0.10.0...HEAD
[0.10.0]: https://github.com/hephy-dd/comet-pqc/compare/0.9.0...0.10.0
[0.9.0]: https://github.com/hephy-dd/comet-pqc/compare/0.8.0...0.9.0
[0.8.0]: https://github.com/hephy-dd/comet-pqc/compare/0.7.0...0.8.0
[0.7.0]: https://github.com/hephy-dd/comet-pqc/compare/0.6.1...0.7.0
[0.6.1]: https://github.com/hephy-dd/comet-pqc/compare/0.6.0...0.6.1