@@ -529,6 +529,7 @@ class MeasureProcess(Process, DeviceMixin):
                                 timestamp=dt,
                                 voltage=reading.get('U'),
                                 current=reading.get('channels')[sensor.index].get('I'),
+                                smu_current=reading.get('I'),
                                 pt100=reading.get('channels')[sensor.index].get('temp'),
                                 cts_temperature=self.temperature(),
                                 cts_humidity=self.humidity(),
@@ -606,6 +607,7 @@ class MeasureProcess(Process, DeviceMixin):
                             timestamp=dt,
                             voltage=reading.get('U'),
                             current=reading.get('channels')[sensor.index].get('I'),
+                            smu_current=reading.get('I'),
                             pt100=reading.get('channels')[sensor.index].get('temp'),
                             cts_temperature=self.temperature(),
                             cts_humidity=self.humidity(),
