@@ -7,6 +7,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 
 ## [0.11.0] - 2021-06-22
+### Added
+- SMU total current column in output files (#23).
 ### Changed
 - Synchronized zoom for IV and It plots (#18).
 
